<menu
    xmlns:android="http://schemas.android.com/apk/res/android">


    <item android:id="@+id/menu1"
        android:title="@string/activity_main"
        android:orderInCategory="100"
        />

    <item android:id="@+id/menu2"
        android:title="@string/grid_layout"
        android:orderInCategory="100"
        />

    <item android:id="@+id/menu3"
        android:title="@string/linear_layout"
        android:orderInCategory="100"
        />

    <item android:id="@+id/menu4"
        android:title="@string/linear_layout_no_weight"
        android:orderInCategory="100"
        />

    <item android:id="@+id/menu5"
        android:title="@string/linear_layout_frames"
        android:orderInCategory="100"
        />

    <item android:id="@+id/menu6"
        android:title="@string/linear_layout_wrap"
        android:orderInCategory="100"
        />

    <item android:id="@+id/menu7"
        android:title="@string/padding_and_margin"
        android:orderInCategory="100"
        />

    <item android:id="@+id/menu8"
        android:title="@string/relative"
        android:orderInCategory="100"
        />

    <item android:id="@+id/menu9"
        android:title="@string/widgets"
        android:orderInCategory="100"
        />

</menu>
