<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">


    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#abcdef"
        android:columnCount="3"
        android:rowCount="3"
        >

        <Button
            android:background="#aa55ee"
            android:id="@+id/button1"
            android:text="@string/button_1" />

        <Button
            android:id="@+id/button2"
            android:text="@string/button_2" />

        <Button
            android:id="@+id/button3"
            android:layout_column="2"
            android:layout_row="2"
            android:text="@string/button_3" />

        <Button
            android:id="@+id/button4"
            android:text="@string/button_4" />

    </GridLayout>

</RelativeLayout>
